--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo Template
+title: 低谷中前行
 subtitle: ''
 description: ''
 keywords:
-author: JiJi
+author: 小鸟
 language: en
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://jiji.pro/hexo-template
+url: https://startearly.githup.io
 permalink: :title/
 permalink_defaults:
 pretty_urls:
@@ -103,5 +103,3 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
-
-root: /hexo-template
